Add normalized sums of squares (RStudio JCY)
* A quick check, not sure if it's correct

--- a/demo_STATISnorm4r.rmd
+++ b/demo_STATISnorm4r.rmd
@@ -48,6 +48,7 @@ Setting up colors for plotting
 group.col <- RColorBrewer::brewer.pal(5,"Set1")[c(rep(x=1,8),rep(x=2,9),rep(x=3,9),rep(x=4,8),rep(x=5,10))]
 group.des <- c(rep("E",8),rep("A",9),rep("C",9),rep("N",8),rep("O",10))
 group.des.nominal <- makeNominalData(as.matrix(group.des))
+group.des.nomnorm <- group.des.nominal/c(rep(8,8),rep(9,9),rep(9,9),rep(8,8),rep(10,10))
 group.des.df <- data.frame(group = factor(group.des),row.names = colnames(X))
 group.des.col <- list(group = c(E = RColorBrewer::brewer.pal(5,"Set1")[1],
                                 A = RColorBrewer::brewer.pal(5,"Set1")[2],
@@ -152,6 +153,11 @@ With its sums of squares:
 t(group.des.nominal) %*% end.X %*% group.des.nominal
 ```
 
+With its normalized sums of squares:
+
+```{r NormSS_endX}
+t(group.des.nomnorm) %*% end.X %*% group.des.nomnorm
+```
 
 Plot the heatmap of the original matrix again to compare:
 
@@ -172,6 +178,12 @@ With its sums of squares:
 
 ```{r ss_corX}
 t(group.des.nominal) %*% cor.X %*% group.des.nominal
+```
+
+With its normalized sums of squares:
+
+```{r NormSS_corX}
+t(group.des.nomnorm) %*% cor.X %*% group.des.nomnorm
 ```
 
 ## Try PCA
