Add the pca factor map with 2nd and 3rd components for the original matrix

--- a/demo_STATISnorm4r.rmd
+++ b/demo_STATISnorm4r.rmd
@@ -303,11 +303,24 @@ corX.p <- createFactorMap(corX.pca.res$ExPosition.Data$fi,
                           display.points = TRUE,
                           display.labels = TRUE
 )
+corX.p23 <- createFactorMap(corX.pca.res$ExPosition.Data$fi,
+                            axis1 = 2,
+                            axis2 = 3,
+                            col.points = group.col,
+                            col.labels = group.col,
+                            display.points = TRUE,
+                            display.labels = TRUE
+)
 labels4corX <- createxyLabels.gen(
   lambda = corX.pca.res$ExPosition.Data$eigs ,
   tau = corX.pca.res$ExPosition.Data$t,
   axisName = "Dimension ")
+labels4corX23 <- createxyLabels.gen(
+  lambda = corX.pca.res$ExPosition.Data$eigs[c(2:3)],
+  tau = corX.pca.res$ExPosition.Data$t[c(2:3)],
+  axisName = "Dimension ")
 print(corX.p$zeMap + labels4corX)
+print(corX.p23$zeMap + labels4corX23)
 ```
 
 #### PCA results with STATIS-normalized matrix
